--- a/app/src/main/res/menu/menu_shopping_list.xml
+++ b/app/src/main/res/menu/menu_shopping_list.xml
@@ -4,6 +4,6 @@
     <item
         android:id="@+id/filterShoppingLists"
         android:icon="@drawable/ic_filter"
-        android:title="@string/filter"
+        android:title="@string/shopping_list_filter"
         app:showAsAction="always" />
 </menu>
