--- a/app/src/main/res/layout/layout_shopping_list_empty.xml
+++ b/app/src/main/res/layout/layout_shopping_list_empty.xml
@@ -8,6 +8,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="@string/no_shop_lists" />
+        android:text="@string/no_shopping_lists" />
 
 </FrameLayout>
