--- a/app/src/main/res/layout/list_item_shopping_list.xml
+++ b/app/src/main/res/layout/list_item_shopping_list.xml
@@ -7,7 +7,9 @@
     android:clickable="true"
     android:focusable="true"
     android:orientation="vertical"
+    android:paddingStart="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/list_item_padding"
+    android:paddingEnd="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/list_item_padding">
 
     <TextView
