--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,10 +8,6 @@
         android:name="pl.karollisiewicz.shopping.ui.list.ShoppingListFragment"
         android:label="@string/app_name">
         <action
-            android:id="@+id/actionShoppingListToModify"
-            app:destination="@id/shoppingListModifyFragment" />
-
-        <action
             android:id="@+id/actionShoppingListToDetail"
             app:destination="@id/shoppingListDetailFragment" />
     </fragment>
@@ -19,21 +15,14 @@
     <fragment
         android:id="@+id/shoppingListDetailFragment"
         android:name="pl.karollisiewicz.shopping.ui.detail.ShoppingListDetailFragment"
-        android:label="Shopping List Details">
-
-        <action
-            android:id="@+id/actionShoppingListDetailToModify"
-            app:destination="@id/shoppingListModifyFragment" />
-
+        android:label="{title}">
+        <argument
+            android:name="shoppingListId"
+            app:argType="string"
+            app:nullable="true" />
+        <argument
+            android:name="title"
+            app:argType="string"
+            app:nullable="false"/>
     </fragment>
-
-    <fragment
-        android:id="@+id/shoppingListModifyFragment"
-        android:name="pl.karollisiewicz.shopping.ui.detail.ShoppingListModifyFragment"
-        android:label="Shopping List Details">
-        <action
-            android:id="@+id/actionModifyToShoppingList"
-            app:destination="@id/shoppingListFragment" />
-    </fragment>
-
 </navigation>
