Filtering and archiving.

--- a/app/src/main/res/menu/menu_shopping_list_filter.xml
+++ b/app/src/main/res/menu/menu_shopping_list_filter.xml
@@ -7,6 +7,6 @@
         android:id="@+id/active"
         android:title="@string/shopping_list_active" />
     <item
-        android:id="@+id/completed"
+        android:id="@+id/archived"
         android:title="@string/shopping_list_archived" />
 </menu>
