--- a/app/src/main/res/layout/fragment_shopping_list_detail.xml
+++ b/app/src/main/res/layout/fragment_shopping_list_detail.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.detail.ShoppingListDetailFragment">
 
     <FrameLayout
@@ -31,4 +32,16 @@
             tools:visibility="visible" />
 
     </FrameLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/shoppingListSaveFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_margin"
+        android:src="@drawable/ic_check"
+        android:visibility="gone"
+        app:fabSize="normal"
+        app:layout_anchor="@id/shoppingListDetailContent"
+        app:layout_anchorGravity="bottom|right|end"
+        tools:visibility="visible" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
